prod/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-preview
spec:
  ports:
    - name: "80"
      nodePort: 30100
      port: 80
      protocol: TCP
      targetPort: 80
  type: NodePort
