prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
spec:
  selector:
    app: vote
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
